--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-		# Etapes
+    # Etapes
     steps:
       # 1. Checkout du code source
       - name: Checkout du code
@@ -20,8 +20,8 @@ jobs:
       - name: Installation de Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22' # Remplacez par la version Node.js utilisée par votre projet
-          cache: 'npm'
+          node-version: "22" # Remplacez par la version Node.js utilisée par votre projet
+          cache: "npm"
 
       - name: Installation des dépendances
         run: npm install
